; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/samsung/exynos/extr_chrome_kb.c_ckb_poll.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/samsung/exynos/extr_chrome_kb.c_ckb_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.ckb_softc* }
%struct.ckb_softc = type { i32, i32 }

@CKB_FLAG_POLLING = common dso_local global i32 0, align 4
@curthread = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32)* @ckb_poll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ckb_poll(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ckb_softc*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load %struct.ckb_softc*, %struct.ckb_softc** %7, align 8
  store %struct.ckb_softc* %8, %struct.ckb_softc** %5, align 8
  %9 = call i32 (...) @CKB_LOCK()
  %10 = load i32, i32* %4, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %2
  %13 = load i32, i32* @CKB_FLAG_POLLING, align 4
  %14 = load %struct.ckb_softc*, %struct.ckb_softc** %5, align 8
  %15 = getelementptr inbounds %struct.ckb_softc, %struct.ckb_softc* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = or i32 %16, %13
  store i32 %17, i32* %15, align 4
  %18 = load i32, i32* @curthread, align 4
  %19 = load %struct.ckb_softc*, %struct.ckb_softc** %5, align 8
  %20 = getelementptr inbounds %struct.ckb_softc, %struct.ckb_softc* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  br label %28

21:                                               ; preds = %2
  %22 = load i32, i32* @CKB_FLAG_POLLING, align 4
  %23 = xor i32 %22, -1
  %24 = load %struct.ckb_softc*, %struct.ckb_softc** %5, align 8
  %25 = getelementptr inbounds %struct.ckb_softc, %struct.ckb_softc* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = and i32 %26, %23
  store i32 %27, i32* %25, align 4
  br label %28

28:                                               ; preds = %21, %12
  %29 = call i32 (...) @CKB_UNLOCK()
  ret i32 0
}

declare dso_local i32 @CKB_LOCK(...) #1

declare dso_local i32 @CKB_UNLOCK(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
